syntax = "proto3";

package protos.steps;

option go_package = "github.com/streamdal/streamdal/libs/protos/build/go/protos/steps";
option ruby_package = "Streamdal::Protos";

enum TransformType {
  TRANSFORM_TYPE_UNKNOWN = 0;
  TRANSFORM_TYPE_REPLACE_VALUE = 1;
  TRANSFORM_TYPE_DELETE_FIELD = 2;
  TRANSFORM_TYPE_OBFUSCATE_VALUE = 3;
  TRANSFORM_TYPE_MASK_VALUE = 4;
  TRANSFORM_TYPE_TRUNCATE_VALUE = 5;
  TRANSFORM_TYPE_EXTRACT = 6;
}

message TransformStep {
  string path = 1 [deprecated=true];
  string value = 2 [deprecated=true]; // Should this be bytes? ~DS
  TransformType type = 3;

  oneof options {
    // Replace the value of a field with a new value
    TransformReplaceValueOptions replace_value_options = 101;

    // Delete a field from a JSON payload
    TransformDeleteFieldOptions delete_field_options = 102;

    // Obfuscate hashes the value of a field with sha256
    TransformObfuscateOptions obfuscate_options = 103;

    // Mask part of a field's value with the given character
    TransformMaskOptions mask_options = 104;

    // Truncate the value of a field to a maximum number of characters,
    // or to a percentage of characters based on the field length
    TransformTruncateOptions truncate_options = 105;

    // Extract one or multiple values from a payload
    TransformExtractOptions extract_options = 106;
  }
}

enum TransformTruncateType {
  TRANSFORM_TRUNCATE_TYPE_UNKNOWN = 0;
  TRANSFORM_TRUNCATE_TYPE_LENGTH = 1;
  TRANSFORM_TRUNCATE_TYPE_PERCENTAGE = 2;
}

message TransformTruncateOptions {
  TransformTruncateType type = 1;

  string path = 2;

  // Truncate after this many bytes or this percentage of the original value
  int32 value = 3;
}

message TransformDeleteFieldOptions {
  repeated string paths = 1;
}

message TransformReplaceValueOptions {
  string path = 1;
  string value = 2;
}

message TransformObfuscateOptions {
  string path = 1;
}

message TransformMaskOptions {
  string path = 1;
  string mask = 2;
}

message TransformExtractOptions {
  repeated string paths = 1;
  bool flatten = 2;
}